# Docling_Chandra_Integration

./: .gitignore  README.md  aligned_corpora.ipynb  architecture_analysis.md  pyproject.toml  requirements.txt
dev_scripts/: create_parallel_text_blocks_for_textbooks.py  evaluate_alignment.py  extract_structures_split.py  pdf_watermark_remover.py  process_embeddings.py  run_imd_workflows.py
docling_chandra_plus/: README.md  adapter.py  aligner.py  core.py  visualizer.py
docs/: 01_pdf_extraction_and_annotation.md  02_creating_parallel_corpora.md  03_cross_lingual_retrieval.md  04_creating_parallel_text_blocks.md
notebooks/: RAG_test.ipynb  align_test.ipynb  aligned_corpora_test.ipynb  matching_test.ipynb  test.ipynb  test_merge.ipynb
parallel_corpora/Class_6-Science/Chapter_1/: merged_english.json  merged_hindi.json  merged_tamil.json  parallel_text_blocks.jsonl
parallel_corpora/Class_6-Science/Chapter_10/: merged_english.json  merged_hindi.json  merged_tamil.json  parallel_text_blocks.jsonl
parallel_corpora/Class_6-Science/Chapter_11/: merged_english.json  merged_hindi.json  merged_tamil.json  parallel_text_blocks.jsonl
parallel_corpora/Class_6-Science/Chapter_12/: merged_english.json  merged_hindi.json  merged_tamil.json  (+1 more)
src/: alignment.py  bbox_draw.py  create_parallel_corpora.py  extract_html.py  extract_structures_split.py  matching.py  merge_document_scans.py  retrieve_best_match.py
src/merging/: filters.py  merge_helpers.py
src/processing/: chandra_adapter.py  docling_pipeline.py  pdf_utils.py
src/retreival/: preprocess.py  rets.py
(+32 files in other folders)
