[project]
name = "layout-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "docling",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "opencv-python>=4.11.0.86",
    "transformers>=4.57.5",
    "sentence-transformers>=5.2.1",
    "scikit-learn>=1.7.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
